# cars-selling-api

./: .dockerignore  .gitignore  .pre-commit.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: API-CI.yml  CI.yml
app/: .env.sample  config.py  database.py  main.py  models.py
app/routers/: cars.py
app/tests/: cars_endpoint_tests.py  conftest.py
backend/: .env.sample  .pre-commit.yaml  Dockerfile  docker-entrypoint.sh  requirements.txt
backend/app/: database.py  models.py
backend/app/routers/: cars.py
backend/tests/: app_test.py  cars_endpoint_tests.py  conftest.py
cars_api/: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
cars_api/app/: database.py  main.py  utils.py
cars_api/app/routers/: cars.py
cars_api/tests/: conftest.py  test_cars_endpoint.py
