[tool.poetry]
name = "cars-selling-api"
version = "0.1.0"
description = ""
authors = ["Aimene AHDIBI <ahdibiaymen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.2"
dnspython = "^2.5.0"
motor = "^3.3.2"
python-decouple = "^3.8"
pydantic-mongo = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
